fix featured gallery layout where spacing would break for more than 10 galleries

--- a/wp-content/themes/cordova/assets/css/main.css
+++ b/wp-content/themes/cordova/assets/css/main.css
@@ -6430,6 +6430,9 @@ hr {
   border: 0;
   border-top: 1px solid #000000;
 }
+a:hover {
+  color: #5e5e5e;
+}
 .btn-sm,
 .btn-group-sm > .btn,
 .btn-group-sm > .btn {
