--- a/wp-content/themes/cordova/assets/less/_global.less
+++ b/wp-content/themes/cordova/assets/less/_global.less
@@ -65,3 +65,7 @@ hr {
   border: 0;
   border-top: 1px solid #000000;
 }
+
+a:hover {
+  color: #5e5e5e;
+}
